--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+$link-color: rgb(3, 22, 3);
+
 body {
   margin: 0;
   padding: 0;
@@ -18,7 +20,11 @@ body {
   margin: 10px;
 }
 
-.thumbnail {
-  margin: 5px;
+.link-decoration {
+  color: $link-color;
+
+  &:hover h5 {
+    color: lighten($link-color, 20);
+  }
 }
 
