--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@ $link-color: rgb(3, 22, 3);
 
 body {
   margin: 0;
-  padding: 0;
+  padding: 0;  
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -26,5 +26,9 @@ body {
   &:hover h5 {
     color: lighten($link-color, 20);
   }
+}
+
+.style-details {
+  background: rgb(128, 223, 255);
 }
 
