Some style added

--- a/src/styles/forceColors.scss
+++ b/src/styles/forceColors.scss
@@ -1,76 +1,76 @@
 $font-color: rgb(242, 242, 242);
 
-.grass-force {
+.Grass {
     background: 'rgb(0, 128, 43)';
     color: $font-color;
 }
 
-.poison-force {
+.Poison {
     background: 'rgb(153, 0, 153)';
     color: $font-color;
 }
 
-.fire-force {
+.Fire {
     background: 'rgb(255, 71, 26)';
     color: $font-color;
 }
 
-.flying-force {
+.Flying {
     background: 'rgb(153, 153, 255)';
     color: 'rgb(242, 242, 242)';
 }
 
-.water-force {
+.Water {
     background: 'rgb(0, 153, 255)';
     color: $font-color;
 }
 
-.bug-force {
+.Bug {
     background: 'rgb(163, 163, 117)';
     color: $font-color;
 }
 
-.normal-force {
+.Normal {
     background: 'rgb(102, 153, 0)';
     color: $font-color;
 }
 
-.electric-force {
+.Electric {
     background: 'rgb(197, 197, 116)';
     color: $font-color;
 }
 
-.ground-force {
+.Ground {
     background: 'rgb(77, 38, 0)';
     color: $font-color;
 }
 
-.fighting-force {
+.Fighting {
     background: 'rgb(0, 204, 136)';
     color: $font-color;
 }
 
-.psychic-force {
+.Psychic {
     background: 'rgb(163, 218, 108)';
     color: $font-color;
 }
 
-.rock-force {
+.Rock {
     background: 'rgb(153, 153, 147)';
     color: $font-color;
 }
 
-.ice-force {
+.Ice {
     background: 'rgb(96, 202, 202)';
     color: $font-color;
 }
 
-.ghost-force {
+.Ghost {
     background: 'rgb(230, 230, 230)';
     color: $font-color;
 }
 
-.dragon-force {
+.Dragon {
     background: 'rgb(0, 102, 0)';
     color: $font-color;
 }
