--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -81,3 +81,7 @@ body {
   grid-template-columns: 45% auto 40%;
   grid-template-rows: 300px auto 40%;
 }
+
+.pagination-decoration {
+  margin-top: 20px;
+}
