--- a/src/styles/forceColors.scss
+++ b/src/styles/forceColors.scss
@@ -1,76 +1,76 @@
 $font-color: rgb(242, 242, 242);
 
 .Grass {
-    background: 'rgb(0, 128, 43)';
+    background: rgb(0, 128, 3);
     color: $font-color;
 }
 
 .Poison {
-    background: 'rgb(153, 0, 153)';
+    background: rgb(153, 0, 153);
     color: $font-color;
 }
 
 .Fire {
-    background: 'rgb(255, 71, 26)';
+    background: rgb(255, 71, 26);
     color: $font-color;
 }
 
 .Flying {
-    background: 'rgb(153, 153, 255)';
-    color: 'rgb(242, 242, 242)';
+    background: rgb(153, 153, 255);
+    color: rgb(242, 242, 242);
 }
 
 .Water {
-    background: 'rgb(0, 153, 255)';
+    background: rgb(0, 153, 255);
     color: $font-color;
 }
 
 .Bug {
-    background: 'rgb(163, 163, 117)';
+    background: rgb(163, 163, 117);
     color: $font-color;
 }
 
 .Normal {
-    background: 'rgb(102, 153, 0)';
+    background:rgb(102, 153, 0);
     color: $font-color;
 }
 
 .Electric {
-    background: 'rgb(197, 197, 116)';
+    background: rgb(197, 197, 116);
     color: $font-color;
 }
 
 .Ground {
-    background: 'rgb(77, 38, 0)';
+    background: rgb(77, 38, 0);
     color: $font-color;
 }
 
 .Fighting {
-    background: 'rgb(0, 204, 136)';
+    background: rgb(0, 204, 13);
     color: $font-color;
 }
 
 .Psychic {
-    background: 'rgb(163, 218, 108)';
+    background: rgb(163, 218, 108);
     color: $font-color;
 }
 
 .Rock {
-    background: 'rgb(153, 153, 147)';
+    background: rgb(153, 153, 147);
     color: $font-color;
 }
 
 .Ice {
-    background: 'rgb(96, 202, 202)';
+    background: rgb(96, 202, 202);
     color: $font-color;
 }
 
 .Ghost {
-    background: 'rgb(230, 230, 230)';
+    background: rgb(230, 230, 230);
     color: $font-color;
 }
 
 .Dragon {
-    background: 'rgb(0, 102, 0)';
+    background: rgb(0, 102, 0);
     color: $font-color;
 }
