--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -85,3 +85,11 @@ body {
 .pagination-decoration {
   margin-top: 20px;
 }
+
+.pagination-link {
+  font-weight: bold;
+  font-size: 15px;
+  border: 2px solid rgb(118, 122, 118);
+  border-radius: 15px;
+  padding: 5px;
+}
